--- a/package.json
+++ b/package.json
@@ -3,5 +3,19 @@
   "version": "0.0.0",
   "main": "index.js",
   "author": "Kennedy Rose <krose@escaladesports.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "keywords": [
+    "escalade",
+    "sports",
+    "eslint",
+    "eslintconfig"
+  ],
+  "peerDependencies": {
+    "eslint": ">= 3"
+  },
+  "dependencies": {
+    "babel-eslint": "^8.2.6",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0"
+  }
 }
