--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "eslint",
     "eslintconfig"
   ],
+  "scripts": {
+    "travis": "opn https://travis-ci.org/escaladesports/eslint-config-escalade-sports/branches"
+  },
   "peerDependencies": {
     "eslint": ">= 3"
   },
@@ -17,5 +20,8 @@
     "babel-eslint": "^8.2.6",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0"
+  },
+  "devDependencies": {
+    "opn-cli": "^3.1.0"
   }
 }
