--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   ],
   "scripts": {
     "test": "echo 'No test'",
-    "travis": "opn https://travis-ci.org/escaladesports/eslint-config-escalade-sports/branches"
+    "travis": "open-cli https://travis-ci.org/escaladesports/eslint-config-escalade-sports/branches"
   },
   "peerDependencies": {
     "eslint": ">= 3"
   },
   "dependencies": {
-    "babel-eslint": "^8.2.6",
-    "eslint-plugin-jest": "^21.18.0",
+    "babel-eslint": "^10.0.2",
+    "eslint-plugin-jest": "^22.10.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.10.0"
   },
   "devDependencies": {
-    "opn-cli": "^3.1.0"
+    "open-cli": "^5.0.0"
   }
 }
